Implement sync entity from cloudant
